--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,3 +43,9 @@ padding: 0;
     background: white;
     padding: 1em;
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+}
